fixed minor bug with timeline on small screens

--- a/src/components/careerTimeline.css
+++ b/src/components/careerTimeline.css
@@ -125,7 +125,9 @@
     display: inline-block;
     width: 100%;
     text-align: right;
-
-
 }
+.timeline-container{
+    height: auto;
+}
+
 }
